--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.0",
+    "@types/react-markdown": "^8.0.7",
+    "@types/remark-gfm": "^3.0.0",
+    "@types/remark-breaks": "^2.0.0",
+    "@types/rehype-raw": "^6.0.2",
+    "@types/rehype-highlight": "^6.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
