--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ai-service.licongcong-ok.workers.dev",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
